# gui-boilerplate

./: README.md
resident-rs/: README.md
resident-rs/native-windows-tide/: Cargo.toml
resident-rs/native-windows-tide/src/: main.html  main.rs  webview.html
resident-rs/winit-tray-icon/: Cargo.toml
resident-rs/winit-tray-icon/src/: err.rs  main.rs
resident-rs/winit-tray-icon/src/app/: build_gui.rs  console.rs  event.rs  mod.rs
resident-rs/winit-tray-icon/src/server/: config.html  enum_util.rs  handler.rs  mod.rs
wasm/: README.md
wasm/1-1_wasm_vanilla/: Cargo.toml
wasm/1-1_wasm_vanilla/examples/: wasm_vanilla.html  wasmtime.rs
wasm/1-1_wasm_vanilla/src/: lib.rs
wasm/1-2_wasm_vanilla_wasi/: Cargo.toml
wasm/1-2_wasm_vanilla_wasi/examples/: wasm_vanilla.html  wasmtime.rs
wasm/1-2_wasm_vanilla_wasi/src/: lib.rs
wasm/1-3_wasm_vanilla_filesystem/examples/: wasmtime.rs
wasm/1-3_wasm_vanilla_filesystem/src/: lib.rs
wasm/1-4_wasm_vanilla_string/: Cargo.toml
wasm/1-4_wasm_vanilla_string/examples/: wasmtime.rs
wasm/1-4_wasm_vanilla_string/src/: lib.rs
wasm/1-5_wasm_vanilla_making/: Cargo.toml  main.rs
wasm/1-5_wasm_vanilla_making/examples/: wasmtime.rs
wasm/1-5_wasm_vanilla_making/src/: lib.rs
wasm/1-5_wasm_vanilla_making/wasm_library/: Cargo.toml
wasm/1-5_wasm_vanilla_making/wasm_library/src/: lib.rs
wasm/2_wasm_pack/src/: lib.rs
wasm/3-1_wasm_extism/: Cargo.toml
wasm/3-1_wasm_extism/examples/: main.rs
wasm/3-1_wasm_extism/src/: lib.rs
wasm/3-2_wasm_extism_cs/: Program.cs  wasm_extism_cs.csproj
wasm/4-2_wasm_extism_cs/: README.md
wasm/4_wasm_wit/: Cargo.toml
wasm/4_wasm_wit/examples/: wasmtime.rs
wasm/4_wasm_wit/src/: lib.rs
wasm/4_wasm_wit/wit/: sample.wit
webview-cs/: WVVMSample.csproj
webview-rs/wry0.39.3/: Cargo.toml
webview-rs/wry0.39.3/src/: main.rs
webview-rs/wry0.50.5/: Cargo.toml
webview-rs/wry0.50.5/src/: action.rs  app.rs  main.rs  state.rs
webview-rs/wry0.50.5/src/app/: handler.rs
webview-rs/wry0.50.5/src/resource/: index.html
webview-rust/wry0.39.3/src/resource/: index.html
