[package]
name = "wasm_vanilla"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[[example]]
name = "wasmtime"
required-features = ["wasmtime"]

[dependencies]
wasmtime = { optional=true, version="23.0.1"}

