[package]
name = "wry-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wry = "0.39.3"
tao = "0.27.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
include_dir = "0.7.3"