[package]
name = "wry-sample"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.97", features = ["std", "backtrace"] }
thiserror = "2.0.12"
indoc = "2.0.6"

wry = "0.50.5"
winit = "0.30.9"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
include_dir = "0.7.3"